stop btn text wrapping

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,15 +11,15 @@ html {
 }
 
 .primary-btn {
-  @apply uppercase min-w-min px-6 py-3 rounded-md text-sm font-bold text-white bg-apple-700 hover:bg-apple-600 focus:outline-none;
+  @apply uppercase text-nowrap px-6 py-3 rounded-md text-sm font-bold text-white bg-apple-700 hover:bg-apple-600 focus:outline-none;
 }
 
 .secondary-btn {
-  @apply uppercase min-w-min px-6 py-3 rounded-md text-sm font-bold text-white bg-mucky-800 hover:bg-mucky-600 focus:outline-none;
+  @apply uppercase text-nowrap px-6 py-3 rounded-md text-sm font-bold text-white bg-mucky-800 hover:bg-mucky-600 focus:outline-none;
 }
 
 .clear-btn {
-  @apply uppercase min-w-min px-6 py-3 rounded-md text-sm font-bold text-mucky-950 bg-mucky-50 hover:bg-mucky-100 hover:text-apple-700 focus:outline-mucky-700;
+  @apply uppercase text-nowrap px-6 py-3 rounded-md text-sm font-bold text-mucky-950 bg-mucky-50 hover:bg-mucky-100 hover:text-apple-700 focus:outline-mucky-700;
 }
 
 .h2 {
